# wordsiv-langpack

./: pyproject.toml
wordsiv_langpack_tallpauley/: __init__.py
wordsiv_langpack_tallpauley/data/: ar_wordcount_subs.tsv  ar_wordcount_subs_meta.json  en_wordcount_books.tsv  en_wordcount_books_meta.json  es_wordcount_subs_meta.json  fa_wordcount_subs.tsv  fa_wordcount_subs_meta.json
